Fix publication wrapping

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 63em;
     padding: 2em 2em 4em;
 }
 
